--- a/JUNE 14 DESIGN/css/styles.css
+++ b/JUNE 14 DESIGN/css/styles.css
@@ -1,10 +1,9 @@
+html {
+    background-color: black;
+}
 .logoNav{
 	height: 68px !important;
 	margin-top: -10px;
-}
-body{
-	margin-top: 5px;
-
 }
 .footerLogo{
 	height: 100px;
@@ -114,4 +113,23 @@ section.cta .overlay {
 #return-to-top:hover i {
     color: #fff;
     top: 5px;
+}
+body {
+    margin-top: 5px;
+    opacity: 1;
+    transition: 1s opacity;
+}
+body.fade-out {
+    opacity: 0;
+    transition: none;
+}
+div#preloader { 
+  position: fixed; 
+  left: 0; 
+  top: 0; 
+  z-index: 999; 
+  width: 100%;
+  height: 100%; 
+  overflow: visible; 
+  background: #333 url('http://files.mimoymima.com/images/loading.gif') no-repeat center center; 
 }
