--- a/New Design/css/style.css
+++ b/New Design/css/style.css
@@ -151,41 +151,6 @@ h1, h2, h3, h4, h5, h6
     background: #fff;
 }
 /****/
-#cta-1
-{
-	padding: 40px 0px;
-}
-.cta-info
-{
-	border: 5px solid #FFD34E;
-	padding: 40px 0px;
-}
-.cta-info h3
-{
-	font-size: 24px;
-}
-.dec-tec
-{
-	font-size: 34px;
-}
-/****/
-#feature
-{
-	background-color: #f8f8f8;
-}
-.head-title
-{
-	color: #2b2b2b;
-	font-size: 32px;
-	font-weight: 700;
-}
-.botm-line
-{
-	background-color: #2b2b2b;
-	width: 34px;
-	height: 3px;
-	display: inline-block;
-}
 .section-title:hover .botm-line
 {
 	width: 70px;
@@ -204,105 +169,11 @@ p
 {
 	color: #888;
 }
-.icon {
-    position: relative;
-    height: 48px;
-    width: 48px;
-    float: left;
-    margin-top: 14px;
-    margin-bottom: 20px;
-}
-.icon i
-{
-	font-size: 35px;
-}
-.icon-text {
-    margin-left: 73px;
-    padding:0px 25px 25px 0px;
-}
-h3.txt-tl {
-    font-size: 24px;
-    line-height: 1.35;
-}
-/****/
-.parallax {
-    background-attachment: fixed;
-    background-repeat: repeat-y;
-    background-position: center center;
-}
-.bg-image-2 {
-    background: url('../img/cta-banner.jpg') no-repeat center fixed;
-    -webkit-background-size: 100% auto;
-    -moz-background-size: 100% auto;
-    -o-background-size: 100% auto;
-    background-size: 100% auto;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
 .section {
     position: relative;
     padding: 88px 0 67px 0;
     display: block;
 }
-.cta-txt h3 {
-    
-    font-size: 32px;
-    margin-bottom: 10px;
-    font-weight: 700;
-    color: #fff;
-}
-.cta-txt p
-{
-	color: #fff;
-}
-/****/
-.portfolio-box
-{
-	margin-bottom: 15px;
-}
-.padding-right-zero
-{
-	padding-right: 0px;
-}
-#contact
-{
-	background-color: #f8f8f8;
-}
-
-.validation {
-    color: red;
-    display:none;
-    margin: 0 0 20px;
-    font-weight:400;
-    font-size:13px;
-}
-
-#sendmessage {
-    color: green;
-    border:1px solid green;
-    display:none;
-    text-align:center;
-    padding:15px;
-    font-weight:600;
-    margin-bottom:15px;
-}
-
-#errormessage {
-    color: red;
-    display:none;
-    border:1px solid red;
-    text-align:center;
-    padding:15px;
-    font-weight:600;
-    margin-bottom:15px;
-}
-
-#sendmessage.show, #errormessage.show, .show {
-	display:block;
-}
-
 .black
 {
 	color: #000 !important;
@@ -316,35 +187,13 @@ h3.txt-tl {
 }
 a, a:hover
 {
-	color: #c42f2f;
+	color: #006091;
     text-decoration: none;
 }
 .cont-title
 {
 	font-size: 24px;
 	padding:15px 0px;
-}
-/****/
-#footer
-{
-	background-color: #191919;
-	padding: 20px 0px;
-}
-.footer-copyright {
-    color: #fff;
-    line-height: 32px;
-    text-align: left;
-}
-.footer-social
-{
-	float: right;
-}
-.footer-social a {
-    font-size: 18px;
-    color: #666;
-}
-.link-dec, .link-dec:hover{
-    color: #000;
 }
 /****/
 @media (min-width: 451px) and (max-width: 900px){
@@ -472,4 +321,20 @@ a, a:hover
 }
 .space{
   padding-right: 8px !important;
+}
+.titleFont{
+    color: #09659b !important;
+}
+.subLabel{
+    color: #009b8e !important;
+    text-transform: uppercase;
+    font-size: 1.2em;
+}
+hr.style-four {
+    height: 12px;
+    border: 0;
+    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
+.addPicture{
+    height: 200px;
 }
