--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,17 @@ h1, h2, h3, h4, h5, h6
 	text-transform: uppercase;
 	padding: 25px 0px;
 }
+.companytitle
+{
+    font-size: 40px;
+    font-weight: 700;
+    color: #fff;
+    line-height: 10px;
+    letter-spacing: 4px;
+    opacity: 1;
+    text-transform: uppercase;
+    padding: 25px 0px;
+}
 .btn-submit
 {
     background: #FFD34E;
