--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ h1, h2, h3, h4, h5, h6
 {
 	font-size: 80px;
 	font-weight: 700;
-	color: #fff;
+	color: #f2f0a4;
 	line-height: 10px;
 	letter-spacing: 4px;
 	opacity: 1;
@@ -128,7 +128,7 @@ h1, h2, h3, h4, h5, h6
 {
     font-size: 40px;
     font-weight: 700;
-    color: #fff;
+    color: #f2f0a4;
     line-height: 10px;
     letter-spacing: 4px;
     opacity: 1;
