--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,9 @@ a, a:hover
 }
 .titleFont{
     color: #09659b !important;
+    text-transform: uppercase;
+    font-size: 1.8em;
+    letter-spacing: 3px;
 }
 .subLabel{
     color: #009b8e !important;
@@ -356,4 +359,7 @@ h2.titleRequirements{
     font-size: 1.5em;
     text-transform: uppercase;
     letter-spacing: 2px;
+}
+.touch{
+    cursor: pointer;
 }
