Last modified (June 16)

--- a/css/style.css
+++ b/css/style.css
@@ -363,3 +363,8 @@ h2.titleRequirements{
 .touch{
     cursor: pointer;
 }
+h4.modal-title{
+    text-transform: uppercase !important;
+    letter-spacing: 2px;
+    color: #ce1919;
+}
