ADded the summary

--- a/css/style.css
+++ b/css/style.css
@@ -380,5 +380,32 @@ div.borderXwidth a:hover:before, div.borderXwidth a:hover:after
     font-size: 4em;
 }
 .well{
-    height: 250px !important; 
+    height: 250px !important;
+}
+.paddingInBetween{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
+.col-fixed {
+    /* custom width */
+    width:320px;
+}
+.col-min {
+    /* custom min width */
+    min-width:320px;
+}
+.col-max {
+    /* custom max width */
+    max-width:320px;
 }
