Changed the color of the hover

--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ h4.modal-title{
     background: #c6ffd2;
 }
 .green:hover{
-    background: #7efc98;
+    background: #56ce7e;
 }
 .orange{
     background: #ffdfc6;
@@ -372,7 +372,7 @@ h4.modal-title{
     background: #feffdb;
 }
 .yellow:hover{
-    background: #f3f771;
+    background: #d8db48;
 }
 .colorInfo{
     color: #000000;
