--- a/css/style.css
+++ b/css/style.css
@@ -338,41 +338,29 @@ h4.modal-title{
 .blue,.green,.orange,.red,.violet,.yellow:before {
   transition: all .3s;
 }
-.blue{
+
+.blue:hover{
     background: #D9F3FF;
 }
-.blue:hover{
-    background: #6ac7f2;
-}
-.green{
+
+.green:hover{
     background: #c6ffd2;
 }
-.green:hover{
-    background: #56ce7e;
-}
-.orange{
+
+.orange:hover{
     background: #ffdfc6;
 }
-.orange:hover{
-    background: #f9ba89;
-}
-.red{
+
+.red:hover{
     background: #ffdbdb;
 }
-.red:hover{
-    background: #f98989;
-}
-.violet{
+
+.violet:hover{
     background: #ecdbff;
 }
-.violet:hover{
-    background: #c599f7;
-}
-.yellow{
-    background: #feffdb;
-}
+
 .yellow:hover{
-    background: #d8db48;
+    background: #feffdb;
 }
 .colorInfo{
     color: #000000;
@@ -422,3 +410,13 @@ span.indexIcon{
 #wellHeight,
 .wellHeight{
     height: 250px !important;
+}
+.quickSummary{
+    color: #111111;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 1.3em;
+}
+.quickSummary{
+    cursor: pointer;
+}
