--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6
 }
 .wrapper
 {
-	padding: 90px 0px 50px;
+	padding: 90px 0px;
 }
 .top-title
 {
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5, h6
 	font-weight: 700;
 	color: #fff;
 	line-height: 0px;
-	letter-spacing: 5px;
+	letter-spacing: 6px;
 	opacity: 1;
 	text-transform: uppercase;
 }
