--- a/css/preloader.css
+++ b/css/preloader.css
@@ -1,59 +1,14 @@
-#laserbar {
-	position: fixed;
-	z-index: 247563;
-	top: 0;
-	left: 0;
-	width: 0;
-	height: 5px;
-	background: #0c84b7;
-	border-radius: 15%;
-	-moz-transition: width 500ms ease-out,opacity 400ms linear;
-	-ms-transition: width 500ms ease-out,opacity 400ms linear;
-	-o-transition: width 500ms ease-out,opacity 400ms linear;
-	-webkit-transition: width 500ms ease-out,opacity 400ms linear;
-	transition: width 500ms ease-out,opacity 400ms linear;
-}
-#laserbar.done { opacity: 0; }
-#laserbar.waiting:before {
-	position: absolute;
-  	content: '';
-	top: 0;
-  	opacity: 1;
-	width: 15%;
-	right: 0px;
-	height: 2px;
-	box-shadow: #3bb3cc 1px 0 6px 2px;
-	border-radius: 10%;
-}
-@-moz-keyframes pulse {
-	30% { opacity: 1; }
-	60% {	opacity: 0;	}
-	100% { opacity: 1; }
-}
-@-ms-keyframes pulse {
-	30% { opacity: 1; }
-	60% {	opacity: 0;	}
-	100% { opacity: 1; }
-}
-@-o-keyframes pulse {
-	30% { opacity: 1; }
-	60% {	opacity: 0;	}
-	100% { opacity: 1; }
-}
-@-webkit-keyframes pulse {
-	30% { opacity: 1; }
-	60% {	opacity: 0;	}
-	100% { opacity: 1; }
-}
-@keyframes pulse {
-	30% { opacity: 1; }
-	60% {	opacity: 0;	}
-	100% { opacity: 1; }
-}
-#laserbar.waiting:before {
-  -moz-animation: pulse 1.5s ease-out 0s infinite;
-	-ms-animation: pulse 1.5s ease-out 0s infinite;
-	-o-animation: pulse 1.5s ease-out 0s infinite;
-	-webkit-animation: pulse 1.5s ease-out 0s infinite;
-	animation: pulse 1.5s ease-out 0s infinite
+div#preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  background: #333
+    url('http://files.mimoymima.com/images/loading.gif')
+    no-repeat
+    center
+    center;
 }
