--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ a:hover{
     background: rgba(0,0,0,0.82);
     padding: 25px 0;
 }
+/*--
 nav.stroke ul li a,
 nav.fill ul li a {
   position: relative;
@@ -105,6 +106,7 @@ nav ul li a:after,
 nav ul li a:before {
   transition: all .5s;
 }
+--/
 
 
 /*---------------------------TYPOGRAPHY---------------------------*/
@@ -114,7 +116,7 @@ nav ul li a:before {
 }
 .top-title{
 	z-index: 5;
-	font-size: 20px;
+	font-size: 25px;
 	font-weight: 700;
 	color: #fff;
 	line-height: 0px;
@@ -123,7 +125,7 @@ nav ul li a:before {
 	text-transform: uppercase;
 }
 .sub-title{
-	font-size: 40px;
+	font-size: 25px;
 	font-weight: 700;
 	color: #fff;
 	line-height: 71px;
@@ -132,9 +134,9 @@ nav ul li a:before {
 	text-transform: uppercase;
 }
 .title{
-	font-size: 60px;
+	font-size: 25px;
 	font-weight: 700;
-	color: #1babd3;
+	color: #82ceff;
 	line-height: 0px;
 	letter-spacing: 4px;
 	opacity: 1;
@@ -142,7 +144,7 @@ nav ul li a:before {
 	padding: 25px 0px;
 }
 .companytitle{
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 700;
     color: #1babd3;
     line-height: 10px;
@@ -171,6 +173,9 @@ nav ul li a:before {
         background-color: rgba(0, 0, 0, 0.70);
         color: #1babd3;
     }
+    .navbar-brand img{
+        height: 50px;
+    }
 }
 @media (min-width: 20px) and (max-width: 450px){
     .navbar-toggle:hover, .navbar-toggle{
@@ -193,10 +198,10 @@ nav ul li a:before {
         font-size: 15px;
     }
     .title{
-        font-size: 50px;
+        font-size: 15px;
     }
     .sub-title{
-        font-size: 24px;
+        font-size: 15px;
     }
     .padding-right-zero{
         padding-right: 15px;
@@ -215,20 +220,20 @@ nav ul li a:before {
     }
 }
 
-.overlay {
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.80);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.footerLogo{
-    height: 60px;
-}
-.padding-top{
-    padding-top: 50px !important;
-}
+    .overlay {
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.80);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .footerLogo{
+        height: 60px;
+    }
+    .padding-top{
+        padding-top: 50px !important;
+    }
 /*----------------------------RETURN TO TOP------------------------------*/
 #return-to-top {
     position: fixed;
@@ -367,7 +372,9 @@ button.disabled{
     text-transform: uppercase;
     letter-spacing: 2.5px;
 }
-
+.paddingTop{
+    padding: 150px 0;
+}
 /*-----------------------------QUICK SUMMARY STYLES-----------------------------*/
 
 .blue,.green,.orange,.red,.violet,.yellow,
