--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+table th:hover{
+     cursor:pointer;
+}
 .section-padding
 {
 	padding: 20px 15px;
