--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,11 @@ a:hover{
 /*--------------------NAVIGATION--------------------------*/
 .logoNav{
     height: 60px !important;
-    margin-top: -20px;
+    margin-top: -30px;
 }
 .navbar-default {
-    background-color: transparent;
-    height: 70px;
-}
-.main-header
-{
-	background: url(../img/taas.jpg) no-repeat;
-	background-size: cover;
-	min-height: 80px;
+    background-color: #000;
+    height: 20px;
 }
 .navbar-brand
 {
@@ -51,13 +45,9 @@ a:hover{
     height: inherit;
     font-family: 'Lato', sans-serif;
 }
-.bg-color
-{
-	background-color: RGBA(0, 0, 0, 0.72);
-}
 .nav > li > a {
     padding: 0px;
-    margin-top: -20px;
+    margin-top: -30px;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     color: #82ceff;
@@ -77,46 +67,39 @@ a:hover{
     transition: all 0.5s;
 }
 .top-nav-collapse {
-    background: rgba(0,0,0,0.82);
-    padding: 25px 0;
+    background: rgba(0,0,0,0.90);
+    padding: 35px 0;
 }
-/*--
-nav.stroke ul li a,
-nav.fill ul li a {
-  position: relative;
-}
-nav.stroke ul li a:after,
-nav.fill ul li a:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 0%;
-  content: '.';
-  color: transparent;
-  background: #22e2d6;
-  height: 1px;
-}
-nav.stroke ul li a:hover:after {
-  width: 100%;
-}
-nav ul li a,
-nav ul li a:after,
-nav ul li a:before {
-  transition: all .5s;
-}
---/
 
+/*---------------------------SECTION---------------------------*/
+.sect{
+  height: 40%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin-top: 80px;
+  padding: 80px;
+  background-image: url();
+
+} 
+
+.bg{
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.78), 
+      rgba(0, 112, 143, 0.79)
+    ),
+    /* bottom, image */
+    url("../img/taas.jpg");
+}
 
 /*---------------------------TYPOGRAPHY---------------------------*/
-
 .wrapper{
 	padding: 50px 0px;
 }
 .top-title{
 	z-index: 5;
-	font-size: 25px;
+	font-size: 30px;
 	font-weight: 700;
 	color: #fff;
 	line-height: 0px;
@@ -125,7 +108,7 @@ nav ul li a:before {
 	text-transform: uppercase;
 }
 .sub-title{
-	font-size: 25px;
+	font-size: 30px;
 	font-weight: 700;
 	color: #fff;
 	line-height: 71px;
@@ -134,7 +117,7 @@ nav ul li a:before {
 	text-transform: uppercase;
 }
 .title{
-	font-size: 25px;
+	font-size: 30px;
 	font-weight: 700;
 	color: #82ceff;
 	line-height: 0px;
@@ -144,7 +127,7 @@ nav ul li a:before {
 	padding: 25px 0px;
 }
 .companytitle{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
     color: #1babd3;
     line-height: 10px;
@@ -424,6 +407,4 @@ span.indexIcon{
     color: #055a8e;
     text-align: center;
 }
-
-
 
