Arranged and modified the grid in the add.pgp

--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,9 @@ button.disabled{
 .paddingTop{
     padding: 150px 0;
 }
+.shadowBox{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 /*-----------------------------QUICK SUMMARY STYLES-----------------------------*/
 
 .blue,.green,.orange,.red,.violet,.yellow,
