--- a/css/style.css
+++ b/css/style.css
@@ -438,4 +438,68 @@ span.indexIcon{
     color: #055a8e;
     text-align: center;
 }
-
+/**--------------------------BUTTONS--------------------------**/
+.btn {
+  text-transform: uppercase;
+  padding: 0.35em 1em;
+  font-weight: bold;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  border-radius: 20px;
+  -moz-transition: background 0.3s linear;
+  -webkit-transition: background 0.3s linear;
+  transition: background 0.3s linear;
+}
+.btn:hover {
+  -moz-transition: background 0.3s linear;
+  -webkit-transition: background 0.3s linear;
+  transition: background 0.3s linear;
+}
+.btn-default {
+  color: #2c3e50;
+  border-color: #bdc3c7;
+}
+.btn-default:hover {
+  background-color: #bdc3c7;
+  border-color: #bdc3c7;
+}
+.btn-primary {
+  background-color: #3498db;
+  border-color: #3498db;
+}
+.btn-primary:hover {
+  background-color: #2980b9;
+  border-color: #2980b9;
+}
+.btn-info {
+  background-color: #9b59b6;
+  border-color: #9b59b6;
+}
+.btn-info:hover {
+  background-color: #8e44ad;
+  border-color: #8e44ad;
+}
+.btn-success {
+  background-color: #28bf68;
+  border-color: #2ecc71;
+}
+.btn-success:hover {
+  background-color: #27ae60;
+  border-color: #27ae60;
+}
+.btn-warning {
+  background-color: #f1c40f;
+  border-color: #f1c40f;
+}
+.btn-warning:hover {
+  background-color: #f39c12;
+  border-color: #f39c12;
+}
+.btn-danger {
+  background-color: #e74c3c;
+  border-color: #e74c3c;
+}
+.btn-danger:hover {
+  background-color: #c0392b;
+  border-color: #e74c3c;
+}
