--- a/css/style.css
+++ b/css/style.css
@@ -164,20 +164,24 @@ nav ul li a:before {
     }
     .navbar-default .navbar-nav > li > a{
         text-align: center;
-        background-color: rgba(0, 0, 0, 0.70);
+        background-color: rgba(0, 0, 0, 0.92);
         color: #fff;
     }
     .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
-        background-color: rgba(0, 0, 0, 0.70);
-        color: #1babd3;
+        background-color: rgba(0, 0, 0, 0.92);
+        color: #07bdef;
+        font-weight: bold;
     }
     .navbar-brand img{
-        height: 50px;
+        height: 50px !important;
     }
 }
 @media (min-width: 20px) and (max-width: 450px){
-    .navbar-toggle:hover, .navbar-toggle{
-        background-color: rgba(0, 0, 0, 0.87);
+    .navbar-default .navbar-nav span{
+      color: #fff;
+    }
+    .navbar-toggle, .navbar-toggle:hover{
+        background-color: rgba(0, 0, 0, 0.92);
         color: #000;
     }
     .navbar-toggle{
@@ -185,21 +189,21 @@ nav ul li a:before {
     }
     .navbar-default .navbar-nav > li > a{
         text-align: center;
-        background-color: rgba(0, 0, 0, 0.70);
+        background-color: rgba(0, 0, 0, 0.92);
         color: #fff;
     }
     .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
-        background-color: rgba(0, 0, 0, 0.70);
+        background-color: rgba(0, 0, 0, 0.92);
         color: #1babd3;
     }
     .top-title{
-        font-size: 15px;
+        font-size: 20px;
     }
     .title{
-        font-size: 15px;
+        font-size: 20px;
     }
     .sub-title{
-        font-size: 15px;
+        font-size: 20px;
     }
     .padding-right-zero{
         padding-right: 15px;
@@ -217,7 +221,6 @@ nav ul li a:before {
         font-size: 20px;
     }
 }
-
     .overlay {
       height: 100%;
       width: 100%;
