--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+.table > tbody > tr > td {
+    vertical-align: middle;
+}
 .table > thead > tr > th {
     vertical-align: middle;
 }
