--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,26 @@
+ box-sizing: border-box;
+}
+*:before,
+*:after {
+ box-sizing: border-box;
+}
+
 body {
 	line-height: 1.5;
 	font-family: 'Open Sans', sans-serif;
   overflow-x: hidden; 
+  height: 100%;
+  position: relative;
 }
+
+.main-container {
+ min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 100px; /* height of your footer */
+}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
