--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,12 @@ a:hover{
     text-decoration: none;
 }
 ::selection {
-  background: #75f4f4; /* WebKit/Blink Browsers */
+  background: #4c4c4c; /* WebKit/Blink Browsers */
+  color: #efefef;
 }
 ::-moz-selection {
-  background: #75f4f4; /* Gecko Browsers */
+  background: #4c4c4c; /* Gecko Browsers */
+  color: #efefef;
 }
 /*--------------------NAVIGATION--------------------------*/
 .logoNav{
@@ -177,7 +179,7 @@ a:hover{
 }
 
 /**--------------------------MEDIA QUERIES--------------------------------**/
-@media (min-width: 35px) and (max-width: 800px){
+@media (min-width: 35px) and (max-width: 500px){
     .section-title{
         margin-bottom: 15px;
     }
@@ -195,9 +197,12 @@ a:hover{
         height: 50px !important;
     }
 }
-@media (min-width: 20px) and (max-width: 450px){
+@media (min-width: 20px) and (max-width: 1180px){
     .navbar-default .navbar-nav span{
       color: #fff;
+    }
+    .navbar-brand img{
+        height: 50px !important;
     }
     .navbar-toggle, .navbar-toggle:hover{
         background-color: rgba(0, 0, 0, 0.92);
