--- a/css/style.css
+++ b/css/style.css
@@ -507,10 +507,10 @@ span.indexIcon{
 .btn {
   text-transform: uppercase;
   padding: 0.35em 1em;
-  font-weight: bold;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  border-radius: 20px;
+  font-weight: normal;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
   -moz-transition: background 0.3s linear;
   -webkit-transition: background 0.3s linear;
   transition: background 0.3s linear;
@@ -568,3 +568,50 @@ span.indexIcon{
   background-color: #c0392b;
   border-color: #e74c3c;
 }
+/*
+.btn-collapsible {
+  overflow: hidden;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  max-width: 40px;
+}
+.btn-collapsible.btn-xs {
+  max-width: 25px;
+}
+.btn-collapsible.btn-sm {
+  max-width: 34px;
+}
+.btn-collapsible.btn-lg {
+  max-width: 50px;
+}
+.btn-collapsible span {
+  opacity: 0;
+  text-indent: -6px;
+  display: inline-block;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -ms-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+.btn-collapsible:hover {
+  max-width: 300px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+.btn-collapsible:hover span {
+  opacity: 1;
+  text-indent: 0px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+*/
