--- a/css/footer.css
+++ b/css/footer.css
@@ -1,15 +1,1 @@
-.footer{
-	background-color: #111111;
-	padding: 7.5px;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-}
-.footerLogo{
-	height: 43.5px;
-}
-.credits{
-	font-size: 11.5px;
-	color: #a0a0a0;
-}
-
+.footer{background-color:#111;padding:7.5px;position:absolute;bottom:0;width:100%}.footerLogo{height:43.5px}.credits{font-size:11.5px;color:#a0a0a0}
