--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ button.disabled{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .pdBottom{
-  background-color: #dbdbdb !important;
+  background-color: #e5e5e5 !important;
   padding: 5px 2px 2px 2px;
   border-radius: 5px;
 }
