Added the master reset page

--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,6 @@ a:hover{
   background: rgba(29, 165, 120, 0.89); /* Gecko Browsers */
   color: rgba(44, 186, 169, 0.89);
 }
-.alert {
-   width:50%;    
-}
 /*--------------------NAVIGATION--------------------------*/
 .logoNav{
     height: 65px !important;
@@ -191,7 +188,14 @@ a:hover{
   font-size: 12px !important;
   font-style: italic;
 }
-
+.resetInfo{
+  font-size: 15px !important;
+  line-height: 25px;
+  font-style: italic;
+}
+.resetIcon{
+  height: 180px;
+}
 .green{
   color: #1cb23f !important;
 }
