--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,10 @@ a:hover{
 .resetIcon{
   height: 180px;
 }
+.importIcon{
+  height: 200px;
+  padding: 20px;
+}
 .green{
   color: #1cb23f !important;
 }
